--- a/app/src/main/res/layout/activity_reconocimiento.xml
+++ b/app/src/main/res/layout/activity_reconocimiento.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Reconocimiento">
+    tools:context=".Reconocimiento"
+    android:background="@drawable/rotulo">
 
     <Button
         android:id="@+id/btninicio"
