--- a/app/src/main/res/layout/activity_lector.xml
+++ b/app/src/main/res/layout/activity_lector.xml
@@ -6,31 +6,57 @@
     android:layout_height="match_parent"
     tools:context=".lector">
 
-    <EditText
-        android:id="@+id/txtResultado"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/txtTitulo"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="296dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text=""
-        android:textColor="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/btnScan"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="DATOS DEL EQUIPO"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/txtDataEquipo"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.93"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <TextView
+        android:id="@+id/txtDataEquipo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="167dp"
+        tools:layout_editor_absoluteY="74dp" />
 
     <Button
         android:id="@+id/btncam"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Tomar Foto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtResultado"
-        app:layout_constraintVertical_bias="0.722" />
+        app:layout_constraintTop_toBottomOf="@+id/txtDataEquipo"
+        app:layout_constraintVertical_bias="0.084" />
+
+
+
+    <ImageView
+        android:id="@+id/imgViewCamara"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnReconocer"
+        app:layout_constraintTop_toBottomOf="@+id/btncam"
+        tools:layout_editor_absoluteX="5dp"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <Button
+        android:id="@+id/btnReconocer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Enviar Reconocimeinto"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="158dp" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
